# NiveMart

./: .env  .env.example  .gitignore  README.md  RUN_GUIDE.md  justfile  pyproject.toml  requirements.txt  test.html  url
alembic/: env.py
alembic/versions/: 76a10d7d91ac_message.py  ba89b7d49cd4_create_products_table.py  dfa6f0357c7b_message.py  e738c8211db4_alter_product_type_enum.py  f91ed569ef78_create_users_table.py
nivemart/: __init__.py  config.py  database.py
nivemart-ui/: package-lock.json  package.json
nivemart-ui/public/: index.html
nivemart-ui/src/: App.css  App.jsx
nivemart-ui/src/Components/Oauth/: google.jsx
nivemart-ui/src/Components/objects/: AllButton.jsx  BackButton.jsx  Discount.jsx  Logo.jsx  ModelSec.jsx  SideBar.jsx  SideBarMenu.jsx  Store.jsx
nivemart-ui/src/Components/page/: PageThree.jsx  PageTwo.jsx
nivemart-ui/src/Views/: Casual.jsx  CollectionDisplay.jsx  ErrorPage.jsx  FancyFormal.jsx  Formals.jsx  LandingPage.jsx  NewPage.jsx  Outing.jsx  Party.jsx  SuperCasual.jsx  Trip.jsx  Western.jsx
nivemart/auth/: google.py
nivemart/product/: model.py  schema.py
nivemart/routes/: __init__.py
nivemart/routes/auth/: __init__.py  routes.py
nivemart/routes/product/: __init__.py  routes.py
nivemart/user/: model.py
static/: test.html
tests/: backup.py
